--- a/src/styles/themes/_theme.scss
+++ b/src/styles/themes/_theme.scss
@@ -1,6 +1,8 @@
 // _theme.scss - CSS variables and utility classes
 @use "sass:color";
 @use "sass:map";
+@use "sass:string";
+@use "sass:list";
 @use "../utilities/colors" as COL;
 @use "../abstracts/config" as VAR;
 
@@ -13,7 +15,7 @@
       @each $shade, $value in $scale {
         --#{$color-name}-#{$shade}: #{color.adjust($value, $alpha: 1)};
       }
-    }
+    } 
 
     // Primitive color CSS variables
     @each $color-name, $scale in COL.$colors-primitives {
@@ -25,10 +27,16 @@
 
     @each $token in VAR.$theme-tokens {
       --#{$token}: #{map.get(VAR.$light-theme, $token)};
+      --inverted-#{$token}: #{map.get(VAR.$dark-theme, $token)};
+    }
+    @each $color-name, $color-val in VAR.$basic-colors {
+
+      @warn "Color: #{$color-name} - #{$color-val}";
+      --#{$color-name}: #{$color-val};
     }
 
-    --button-text-color: #{map.get(VAR.$dark-theme, "text-default")};
-    --inverted-text-color: #{map.get(VAR.$dark-theme, "text-default")};
+    // --button-text-color: #{map.get(VAR.$dark-theme, "text-default")};
+    // --inverted-text-color: #{map.get(VAR.$dark-theme, "text-default")};
 
     // Light theme variables
     --button-bg-color: var(--primary);
@@ -36,25 +44,6 @@
     --link-color: var(--primary);
     --link-hover-color: var(--primary-600);
 
-    // #{VAR.$parent-selector} {
-    //   // Scrollbar styling
-    //   &::-webkit-scrollbar {
-    //     width: 12px;
-    //   }
-
-    //   &::-webkit-scrollbar-track {
-    //     background: var(--background);
-    //   }
-
-    //   &::-webkit-scrollbar-thumb {
-    //     background-color: #888;
-    //     border-radius: 6px;
-    //     border: 3px solid var(--background);
-    //   }
-
-    //   scrollbar-width: thin;
-    //   scrollbar-color: #888 var(--background);
-    // }
   }
 
   @if VAR.$enable-dark-mode {
@@ -62,10 +51,10 @@
     [data-theme="dark"] {
       @each $token in VAR.$theme-tokens {
         --#{$token}: #{map.get(VAR.$dark-theme, $token)};
+        --inverted-#{$token}: #{map.get(VAR.$light-theme, $token)};
       }
 
       --button-text-color: #{map.get(VAR.$light-theme, "text-default")};
-      --inverted-text-color: #{map.get(VAR.$light-theme, "text-default")};
       --button-bg-color: var(--primary);
       --button-bg-color-hover: var(--primary-400);
       --link-color: var(--primary);
@@ -184,57 +173,55 @@
     }
   }
 
-  // Semantic color utilities
-  #{VAR.$parent-selector} .bg-page {
-    background-color: var(--background);
+  @each $color-name, $color-val in VAR.$basic-colors {
+     // Base color classes
+     #{VAR.$parent-selector} .text-#{$color-name},
+     #{VAR.$parent-selector} .hover\:text-#{$color-name}:hover,
+     #{VAR.$parent-selector} .group:hover .group-hover\:text-#{$color-name} {
+       color: var(--#{$color-name});
+     }
+ 
+     #{VAR.$parent-selector} .bg-#{$color-name},
+     #{VAR.$parent-selector} .hover\:bg-#{$color-name}:hover,
+     #{VAR.$parent-selector} .group:hover .group-hover\:bg-#{$color-name} {
+       background-color: var(--#{$color-name});
+     }
+ 
+     #{VAR.$parent-selector} .border-#{$color-name},
+     #{VAR.$parent-selector} .hover\:border-#{$color-name}:hover,
+     #{VAR.$parent-selector} .group:hover .group-hover\:border-#{$color-name} {
+       border-color: var(--#{$color-name});
+     }
   }
 
-  #{VAR.$parent-selector} .bg-surface {
-    background-color: var(--surface);
-  }
-
-  #{VAR.$parent-selector} .bg-active {
-    background-color: var(--button-bg-color);
-  }
-
-  #{VAR.$parent-selector} .bg-hover {
-    background-color: var(--button-bg-color-hover);
-  }
-
-  #{VAR.$parent-selector} .bg-white,
-  .hover\:bg-white:hover {
-    background-color: white;
-  }
-
-  #{VAR.$parent-selector} .bg-black,
-  .hover\:bg-black:hover {
-    background-color: black;
-  }
-
-  #{VAR.$parent-selector} .text-default {
-    color: var(--text-default);
-  }
-
-  #{VAR.$parent-selector} .text-muted {
-    color: var(--text-muted);
-  }
-
-  #{VAR.$parent-selector} .text-inverted {
-    color: var(--inverted-text-color);
-  }
-
-  #{VAR.$parent-selector} .text-white,
-  #{VAR.$parent-selector} .hover\:text-white:hover {
-    color: white;
-  }
-
-  #{VAR.$parent-selector} .text-black,
-  #{VAR.$parent-selector} .hover\:text-black:hover {
-    color: black;
-  }
-
-  #{VAR.$parent-selector} .text-subtle {
-    color: var(--text-muted);
-    opacity: 0.7;
+  @each $token in VAR.$theme-tokens {
+    $parts: string.split($token, "-");
+    $prefix: list.nth($parts, 1);
+    
+    #{VAR.$parent-selector} .#{$token},
+    #{VAR.$parent-selector} .hover\:#{$token}:hover, 
+    #{VAR.$parent-selector} .group:hover .group-hover\:#{$token} {
+      @if $prefix == "bg" {
+        background-color: var(--#{$token});
+      } @else if $prefix == "text" {
+        color: var(--#{$token});
+      } @else if $prefix == "border" {
+        border-color: var(--#{$token});
+      }
+    }
+    
+    #{VAR.$parent-selector} .inverted-#{$token},
+    #{VAR.$parent-selector} .hover\:inverted-#{$token}:hover,
+    #{VAR.$parent-selector} .group:hover .group-hover\:inverted-#{$token} {
+      @if $prefix == "bg" {
+        background-color: var(--inverted-#{$token});
+      } @else if $prefix == "text" {
+        color: var(--inverted-#{$token});
+      } @else if $prefix == "border" {
+        border-color: var(--inverted-#{$token});
+      } @else if $prefix == "fg" {
+        color: var(--inverted-#{$token});
+      }
+    }
   }
 }
