changed back circle to full

--- a/src/styles/abstracts/_config.scss
+++ b/src/styles/abstracts/_config.scss
@@ -205,7 +205,7 @@ $border-radii: (
   "lg": 0.75rem,
   "xl": 1rem,
   "2xl": 1.25rem,
-  "circle": 50%,
+  "full": 50%,
   "none": 0,
 ) !default;
 
